RESOLVED FIXED246480
[Gardening] REGRESSION(255324@main): WebProcess crash while running TestUIClient
https://bugs.webkit.org/show_bug.cgi?id=246480
Summary [Gardening] REGRESSION(255324@main): WebProcess crash while running TestUIClient
Adrian Perez
Reported 2022-10-13 16:11:27 PDT
Test case /webkit/WebKitWebView/file-chooser-request seems broken since 255324@main (bug #246143): ERROR:/app/webkit/Tools/TestWebKitAPI/glib/WebKitGLib/WebViewTest.cpp:76:static gboolean WebViewTest::webProcessTerminated(WebKitWebView*, WebKitWebProcessTerminationReason, WebViewTest*): code should not be reached (WebKitWebProcess:14430): GLib-GIO-CRITICAL **: 10:08:33.421: g_file_io_stream_query_info: assertion 'G_IS_FILE_IO_STREAM (stream)' failed
Attachments
Adrian Perez
Comment 1 2022-10-13 16:13:44 PDT
EWS
Comment 2 2022-10-14 02:01:27 PDT
Committed 255525@main (6f034bf97e2b): <https://commits.webkit.org/255525@main> Reviewed commits have been landed. Closing PR #5351 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-14 02:02:18 PDT
Note You need to log in before you can comment on or make changes to this bug.