[Gardening] REGRESSION(255324@main): WebProcess crash while running TestUIClient https://bugs.webkit.org/show_bug.cgi?id=246480

Reviewed by Žan Doberšek.

* Source/WTF/wtf/FileSystem.h: Use nullptr to modernize invalid handle value.
* Source/WTF/wtf/glib/FileSystemGlib.cpp:
(WTF::FileSystemImpl::fileID): Check whether the file handle is valid
before attempting to use it.

Canonical link: https://commits.webkit.org/255525@main